# tododo

./: .gitignore  CLAUDE.md  Joey's Stuff.yaml  README.md  Tododo Design.drawio.xml  apispec.yaml  board.yaml  default_keybindings.yaml  default_settings.yaml  itemspec.yaml  personal.yaml  prompt.md  pyproject.toml  test.yaml
OLD/: board.yaml  filewatcher_encrypt.py  itemspec.yaml  personal.yaml
OLD/boards/: Joey_s_Stuff.yaml
OLD/themes/: dracula.yaml  gruvbox.yaml  nord.yaml
OLD/tododo/: agent.py  avatars.py  client.py  githooks.py  guimodel.py  keybindings.py  markdown.py  models.py  server.py  store.py  ui.py  workspace.py
OLD/tododo/web/: api.raml  app.js  index.html  styles.css
boards/: board.yaml  personal.yaml  test.yaml
docs/: BACKEND-PLAN.md  DSL-format.md  DSL.md  UI-BEHAVIOUR-CHECKLIST.md  tododo.dsl.md
events-encrypted/: keyring  keysalt
tests/: conftest.py  test_actor.py  test_crypto.py  test_filewatcher.py  test_gitsync.py  test_log.py  test_mcp.py  test_models.py  test_projection.py  test_server.py
themes/: default_theme.yaml
tododo/: __init__.py  __main__.py  actor.py  agent.py  app.py  ascii_layout.py  avatars.py  board.py  clipboard.py  crypto.py  filewatcher.py  gitsync.py  history.py  install.py  keybinding_contexts.py  keybinding_contexts.yaml  keybindings.py  log.py  main.py  markdown.py  mcp.py  merge.py  migrate.py  models.py  projection.py  rekey.py  server.py  settings.py  theme.py  themes.py  timefmt.py  ui.py  webhook.py  workspace.py
tododo/themes/: default.css  dracula.css  gruvbox.css  nord.css
tododo/web/: index.html
