[project]
name = "tododo"
version = "0.1.0"
description = ""
authors = [
    {name = "Sam",email = "dodobird181@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "cryptography (>=49.0.0,<50.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "django (>=6.0.7,<7.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
